# pClaw

./: .gitignore  LICENSE  MANIFEST.in  README.md  SKILL.md  env.example.sh  pyproject.toml  requirements.txt
chemdeep_pdf/: __init__.py  downloader.py  settings.py
data/: known_warheads.json
references/: candidate.schema.json  prompt-keyword-generation.md  prompt-relevance-scoring.md  prompt-report-composition.md  prompt-structure-extraction.md
scripts/: __init__.py  download_pdf.py  pubmed_search.py  rank_downloaded.py  run_pipeline.py  smiles_to_image.py  validate_candidates.py
tests/: test_downloader.py  test_known_warheads.py  test_rank_downloaded.py  test_validate_candidates.py
